--- a/_amazon.sass
+++ b/_amazon.sass
@@ -1,4 +1,4 @@
-#demo
+#amazon
     h1
         color: #a31111
         font-size: 30px
@@ -9,12 +9,11 @@
         font-weight: 700
         margin: 100px 0 20px
         max-width: 300px
-        border: 4px solid orange
+        border: 4px solid #FFA500
     .btn
         padding: 5px 15px
         color: #fff
         border-radius: 10px
-        border: 1px solid #000000
         background-color: #000000
     .box
         margin: 30px 0
