--- a/style.css
+++ b/style.css
@@ -13,31 +13,30 @@ section {
   padding: 50px 0;
 }
 
-#demo h1 {
+#amazon h1 {
   color: #a31111;
   font-size: 30px;
   font-weight: 700;
   margin-bottom: 100px;
 }
-#demo input {
+#amazon input {
   font-size: 30px;
   font-weight: 700;
   margin: 100px 0 20px;
   max-width: 300px;
-  border: 4px solid orange;
+  border: 4px solid #FFA500;
 }
-#demo .btn {
+#amazon .btn {
   padding: 5px 15px;
   color: #fff;
   border-radius: 10px;
-  border: 1px solid #000000;
   background-color: #000000;
 }
-#demo .box {
+#amazon .box {
   margin: 30px 0;
   max-width: 60%;
 }
-#demo .box h3 {
+#amazon .box h3 {
   display: inline-flex;
   padding: 5px;
   width: 22%;
