--- a/_amazon.sass
+++ b/_amazon.sass
@@ -17,13 +17,13 @@
         background-color: #000000
     .box
         margin: 30px 0
-        max-width: 60%
+        max-width: 500px
         h3
             display: inline-flex
             padding: 5px
-            width: 22%
-            margin: 10px 10px
+            min-width: 20%
+            margin: 5px 5px
             font-size: 24px
             font-weight: 600
-            border: 1px solid blue
+            border: 1px solid #0206dd
             border-radius: 10px
