--- a/style.css
+++ b/style.css
@@ -34,15 +34,15 @@ section {
 }
 #amazon .box {
   margin: 30px 0;
-  max-width: 60%;
+  max-width: 500px;
 }
 #amazon .box h3 {
   display: inline-flex;
   padding: 5px;
-  width: 22%;
-  margin: 10px 10px;
+  min-width: 20%;
+  margin: 5px 5px;
   font-size: 24px;
   font-weight: 600;
-  border: 1px solid blue;
+  border: 1px solid #0206dd;
   border-radius: 10px;
 }/*# sourceMappingURL=style.css.map */
